# amplifier-app-session-analyzer

./: .gitignore  README.md  pyproject.toml
amplifier_app_session_analyzer/: __init__.py  classifier.py  cli.py  constants.py  metrics.py  parser.py  report.py  report_html.py  report_markdown.py  semantic.py  semantic_metrics.py  time_scope.py
tests/: smoke_test.py
tests/fixtures/projects/sample-project/sessions/session-001/: events.jsonl
tests/fixtures/projects/sample-project/sessions/session-002/: events.jsonl
tests/fixtures/projects/sample-project/sessions/session-003/: events.jsonl
