[project]
name = "amplifier-app-session-analyzer"
version = "0.1.0"
description = "Analyze Amplifier session logs and generate PDF reports on agent autonomy metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "amplifier-foundation @ git+https://github.com/microsoft/amplifier-foundation@main",
]

[project.scripts]
amplifier-session-analyzer = "amplifier_app_session_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_session_analyzer"]

[tool.uv]
package = true
